--- a/developers/index.html
+++ b/developers/index.html
@@ -38,6 +38,10 @@ title: "[The Platform] - Build your own app"
                         <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
                         <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
                     </li>
+                    <li>
+                        <h6><a href="{{site.url}}help/how-to-update.html">How to update</a></h6>
+                        <p>How to update the system to the latest version</p>
+                    </li>
                 </ul>
             </div>
 
