Search API endpoint docs

--- a/help/index.html
+++ b/help/index.html
@@ -76,7 +76,7 @@ title: "[The Platform] - Help"
                 <h2><span class="mega-octicon octicon-question"></span> Frequently asked questions</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and inactive projects?</a></h6>
+                        <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></h6>
                     </li>
                     <li>
                         <h6><a href="{{site.url}}help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></h6>
