--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: GeoKey
+title: Community Maps
 ---
 
 <header class="main" id="home">
         {% include nav.html %}
     <div class="hero">
-        <h1>GeoKey</h1>
+        <h1>Community Maps</h1>
         <p>Create maps for public good</p>
     </div>
 </header>
