Changed names to GeoKey

--- a/communities/index.html
+++ b/communities/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: "[The Platform] - Start mapping today"
+title: "GeoKey – For Communities"
 ---
 
 <header id="header-communities">
     {% include nav.html %}
-    <div class="container">    
+    <div class="container">
         <div class="row">
             <div class="col-sm-6">
                 <h1>For communities</h1>
-                <p>Learn how to set up your own projects and how to use the collected data.</p>  
+                <p>Learn how to set up your own projects and how to use the collected data.</p>
             </div>
         </div>
     </div>
@@ -20,7 +20,7 @@ title: "[The Platform] - Start mapping today"
         <div class="row">
             <div class="col-sm-6">
                 <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
-                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+                <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
     </div>
