--- a/developers/index.html
+++ b/developers/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "[The Platform] - Build your own app"
+title: "GeoKey – For Developers"
 ---
 
 <header id="header-developers">
@@ -9,7 +9,7 @@ title: "[The Platform] - Build your own app"
         <div class="row">
             <div class="col-sm-6">
                 <h1>For developers</h1>
-                <p>The Platform is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
+                <p>GeoKey is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
             </div>
         </div>
     </div>
@@ -20,7 +20,7 @@ title: "[The Platform] - Build your own app"
         <div class="row">
             <div class="col-sm-6">
                 <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
-                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+                <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@ title: "[The Platform] - Build your own app"
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
-                        <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
+                        <p>A comprehensive guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
                         <h6><a href="{{site.url}}help/how-to-update.html">How to update</a></h6>
