--- a/help/index.html
+++ b/help/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "[The Platform] - Help"
+title: "GeoKey – Help"
 ---
 
 <header  id="header-help">
@@ -15,7 +15,7 @@ title: "[The Platform] - Help"
         <div class="row">
             <div class="col-sm-6">
                 <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
-                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+                <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
     </div>
@@ -91,11 +91,11 @@ title: "[The Platform] - Help"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-gear"></span> Running the platform on your own servers</h2>
+                <h2><span class="mega-octicon octicon-gear"></span> Running GeoKey on your own servers</h2>
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
-                        <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
+                        <p>A complete guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
                         <h6><a href="{{site.url}}help/how-to-update.html">How to update</a></h6>
