--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Community Maps
+title: GeoKey
 ---
 
 <header class="main" id="home">
         {% include nav.html %}
     <div class="hero">
-        <h1>Community Maps</h1>
-        <p>Create maps for public good</p>
+        <h1>GeoKey</h1>
+        <p>The key to local knowledge</p>
     </div>
 </header>
 
@@ -16,7 +16,7 @@ title: Community Maps
         <div class="row">
             <div class="col-sm-6">
                 <h2><span>For communities</span> Create a map for your community</h2>
-                <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
+                <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;GeoKey can help.</p>
                 <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
             </div>
 
@@ -44,7 +44,7 @@ title: Community Maps
                 {% for post in site.posts limit:7 %}
                     {% if forloop.index0 > 0 %}
                     <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
-                    {% endif %}    
+                    {% endif %}
                 {% endfor %}
                     <li><a href="{{ site.url }}blog/" class="btn">Read all news in the blog</a></li>
                 </ul>
@@ -57,8 +57,8 @@ title: Community Maps
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <h2><span>About the platform</span></h2>
-                <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+                <h2><span>About GeoKey</span></h2>
+                <p>GeoKey has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
             </div>
         </div>
 
