--- a/help/index.html
+++ b/help/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "GeoKey – Help"
+title: "Help"
 ---
 
 <header  id="header-help">
@@ -62,6 +62,22 @@ title: "GeoKey – Help"
                     </li>
                     <li>
                         <h6><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-person"></span> User settings</h2>
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="notification-settings.html">Notification settings</a></h6>
+                        <p>Define about what you want to notified.</p>
                     </li>
                 </ul>
             </div>
