--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: GeoKey
 
 <header class="main" id="home">
         {% include nav.html %}
-    <div class="hero">
-        <h1>GeoKey</h1>
-        <p>The key to local knowledge</p>
+    <div class="hero container">
+        <h1>Your key to local knowledge</h1>
+        <p>GeoKey is a platform form participatory mapping</p>
     </div>
 </header>
 
