--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ title: GeoKey
             <div class="col-sm-6">
                 <h2><span>For communities</span> Create a map for your community</h2>
                 <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;GeoKey can help.</p>
-                <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
+                <p><a href="/communities/" class="btn">Start mapping today</a></p>
             </div>
 
             <div class="col-sm-6">
                 <h2><span>For developers</span> Build mobile and web apps</h2>
                 <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
-                <p><a href="{{site.url}}developers/" class="btn">Start coding</a></p>
+                <p><a href="/developers/" class="btn">Start coding</a></p>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@ title: GeoKey
             <div class="col-sm-8">
                 <h2><span>Read the latest news</span>{{ site.posts.first.title }}</h2>
                 {{ site.posts.first.excerpt }}
-                <p class="centered"><a href="{{ site.url }}{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
+                <p class="centered"><a href="{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
             </div>
 
             <div class="archive col-sm-4">
@@ -43,10 +43,10 @@ title: GeoKey
                 <ul>
                 {% for post in site.posts limit:7 %}
                     {% if forloop.index0 > 0 %}
-                    <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
+                    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
                     {% endif %}
                 {% endfor %}
-                    <li><a href="{{ site.url }}blog/" class="btn">Read all news in the blog</a></li>
+                    <li><a href="blog/" class="btn">Read all news in the blog</a></li>
                 </ul>
             </div>
         </div>
