--- a/communities/index.html
+++ b/communities/index.html
@@ -19,7 +19,7 @@ title: "GeoKey – For Communities"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="/help/getting-started.html">Getting started</a></h2>
                 <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
