--- a/developers/index.html
+++ b/developers/index.html
@@ -19,7 +19,7 @@ title: "GeoKey – For Developers"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="/help/getting-started.html">Getting started</a></h2>
                 <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
@@ -35,11 +35,11 @@ title: "GeoKey – For Developers"
 
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
+                        <h6><a href="/help/how-to-install.html">How to install</a></h6>
                         <p>A comprehensive guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}help/how-to-update.html">How to update</a></h6>
+                        <h6><a href="/help/how-to-update.html">How to update</a></h6>
                         <p>How to update the system to the latest version</p>
                     </li>
                 </ul>
@@ -51,15 +51,15 @@ title: "GeoKey – For Developers"
 
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/register-your-app.html">Register your app</a></h6>
+                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
                         <p>Before you can use our API you need to register your app.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
                         <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}docs/">Read the API docs</a></h6>
+                        <h6><a href="/docs/">Read the API docs</a></h6>
                         <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                 </ul>
