--- a/help/index.html
+++ b/help/index.html
@@ -14,7 +14,7 @@ title: "Help"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="/help/getting-started.html">Getting started</a></h2>
                 <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
@@ -92,10 +92,10 @@ title: "Help"
                 <h2><span class="mega-octicon octicon-question"></span> Frequently asked questions</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></h6>
+                        <h6><a href="/help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></h6>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></h6>
+                        <h6><a href="/help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></h6>
                     </li>
                 </ul>
             </div>
@@ -110,11 +110,11 @@ title: "Help"
                 <h2><span class="mega-octicon octicon-gear"></span> Running GeoKey on your own servers</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
+                        <h6><a href="/help/how-to-install.html">How to install</a></h6>
                         <p>A complete guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}help/how-to-update.html">How to update</a></h6>
+                        <h6><a href="/help/how-to-update.html">How to update</a></h6>
                         <p>How to update the system to the latest version</p>
                     </li>
                 </ul>
@@ -124,15 +124,15 @@ title: "Help"
                 <h2><span class="mega-octicon octicon-code"></span> Building an app using the API</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="{{site.url}}help/register-your-app.html">Register your app</a></h6>
+                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
                         <p>Before you can use our API you need to register your app.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
                         <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
                     </li>
                     <li>
-                        <h6><a href="{{site.url}}docs/">Read the API docs</a></h6>
+                        <h6><a href="/docs/">Read the API docs</a></h6>
                         <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                 </ul>
