--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Home
                 <p class="centered"><a href="{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
             </div>
 
-            <div class="archive col-sm-4">
+            <!-- <div class="archive col-sm-4">
                 <h2><span>From the archives</span></h2>
                 <ul>
                 {% for post in site.posts limit:7 %}
@@ -48,7 +48,7 @@ title: Home
                 {% endfor %}
                     <li><a href="blog/" class="btn">Read all news in the blog</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
