Link and CSS fixes

--- a/communities/index.html
+++ b/communities/index.html
@@ -33,19 +33,19 @@ title: "GeoKey – For Communities"
                 <h2><span class="mega-octicon octicon-puzzle"></span> Setting up projects</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
+                        <h6><a href="/help/how-to-create-project.html">How to create a new project</a></h6>
                         <p>Projects are you starting point. Learn how to set up a mapping project for your community.</p>
                     </li>
                     <li>
-                        <h6><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h6>
+                        <h6><a href="/help/how-to-setup-categories.html">How to setup categories for data collection</a></h6>
                         <p>Categories are your frame for data collection. You create one category for each data type.</p>
                     </li>
                     <li>
-                        <h6><a href="how-to-create-field.html">How to create fields for a category</a></h6>
+                        <h6><a href="/help/how-to-create-field.html">How to create fields for a category</a></h6>
                         <p>Add fields to your categories to define information you want to collect.</p>
                     </li>
                     <li>
-                        <h6><a href="how-users-access-data.html">How users can access the data in your project</a></h6>
+                        <h6><a href="/help/how-users-access-data.html">How users can access the data in your project</a></h6>
                         <p>Learn how to set up data groupings and user groups to define who can access your data.</p>
                     </li>
                 </ul>
@@ -55,18 +55,18 @@ title: "GeoKey – For Communities"
                 <h2><span class="mega-octicon octicon-tools"></span> Managing projects</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="category-display-settings.html">Category display settings</a></h6>
+                        <h6><a href="/help/category-display-settings.html">Category display settings</a></h6>
                         <p>Define how your contributions will be displayed on the map.</p>
                     </li>
                     <li>
-                        <h6><a href="field-types.html">Field types</a></h6>
+                        <h6><a href="/help/field-types.html">Field types</a></h6>
                         <p>Learn about different field types and what you can do with them.</p>
                     </li>
                     <li>
-                        <h6><a href="add-remove-users.html">Add and remove users to and from user groups</a></h6>
+                        <h6><a href="/help/add-remove-users.html">Add and remove users to and from user groups</a></h6>
                     </li>
                     <li>
-                        <h6><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
+                        <h6><a href="/help/granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
                     </li>
                 </ul>
             </div>
