Final fixes for release

--- a/developers/index.html
+++ b/developers/index.html
@@ -74,13 +74,13 @@ title: "GeoKey – For Developers"
             <div class="col-sm-6" id="github-fork">
                 <h2><span class="mega-octicon octicon-git-branch"></span> Fork the code</h2>
                 <p>Help us to fix bugs or build new features.</p>
-                <p><a href="https://github.com/ExCiteS/opencommunitymaps" class="btn">Fork the code on Github</a></p>
+                <p><a href="https://github.com/ExCiteS/geokey" class="btn">Fork the code on Github</a></p>
             </div>
 
             <div class="col-sm-6" id="github-issue">
                 <h2><span class="mega-octicon octicon-issue-opened"></span> Report a problem</h2>
                 <p>Something does not work as expected? Are you missing a feature? Let us know — we promise to look into it.</p>
-                <p><a href="https://github.com/ExCiteS/opencommunitymaps/issues/new" class="btn">Report a problem</a></p>
+                <p><a href="https://github.com/ExCiteS/geokey/issues/new" class="btn">Report a problem</a></p>
             </div>
         </div>
     </div>
