Added images to front page

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@ title: Home
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span>For communities</span> Create a map for your community</h2>
+                <img src="/build/img/map2.gif" height="200" width="254">
+                <h2><span>For communities</span> Collect, share and discuss local knowledge</h2>
                 <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;GeoKey can help.</p>
                 <p><a href="/communities/" class="btn">Start mapping today</a></p>
             </div>
 
             <div class="col-sm-6">
-                <h2><span>For developers</span> Build mobile and web apps</h2>
+                <img src="/build/img/code.gif" height="200" width="276">
+                <h2><span>For developers</span> Build and connect apps to visualise and analyse data</h2>
                 <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
                 <p><a href="/developers/" class="btn">Start coding</a></p>
             </div>
         </div>
+
     </div>
 </section>
 
