--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
         {% include nav.html %}
     <div class="hero container">
         <h1>Your key to local knowledge</h1>
-        <p>GeoKey is a platform form participatory mapping</p>
+        <p>GeoKey is a platform for participatory mapping</p>
     </div>
 </header>
 
