--- a/communities/index.html
+++ b/communities/index.html
@@ -8,7 +8,7 @@ title: "GeoKey – For Communities"
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <h1>For communities</h1>
+                <h1>Communities</h1>
                 <p>Learn how to set up your own projects and how to use the collected data.</p>
             </div>
         </div>
