--- a/developers/index.html
+++ b/developers/index.html
@@ -8,7 +8,7 @@ title: "GeoKey – For Developers"
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <h1>For developers</h1>
+                <h1>Developers</h1>
                 <p>GeoKey is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
             </div>
         </div>
