Added logos to home page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ title: Home
         <div class="row">
             <div class="col-lg-7 col-lg-offset-1 col-sm-8">
                 <h2><span>About GeoKey</span></h2>
-                <p>GeoKey has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+                <p>GeoKey has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was funded by FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>.</p>
+                <p><a href="http://ucl.ac.uk/excites"><img src="build/img/excites-logo.png" width="93" height="100"></a> <a href="http://citizencyberlab.eu/"><img src="build/img/ccl-logo.png" width="198" height="100"></a></p>
             </div>
         </div>
 
