Vagrant blog + tutorial

--- a/developers/index.html
+++ b/developers/index.html
@@ -39,6 +39,10 @@ title: "GeoKey – For Developers"
                         <p>A comprehensive guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
+                        <h6><a href="/help/vagrant.html">Setup a development environment</a></h6>
+                        <p>Learn how to setup your personal development enviroment in just under 10 minutes.</p>
+                    </li>
+                    <li>
                         <h6><a href="/help/how-to-update.html">How to update</a></h6>
                         <p>How to update the system to the latest version</p>
                     </li>
