--- a/help/index.html
+++ b/help/index.html
@@ -114,6 +114,10 @@ title: "Help"
                         <p>A complete guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
+                        <h6><a href="/help/vagrant.html">Setup a development environment</a></h6>
+                        <p>Learn how to setup your personal development enviroment in just under 10 minutes.</p>
+                    </li>
+                    <li>
                         <h6><a href="/help/how-to-update.html">How to update</a></h6>
                         <p>How to update the system to the latest version</p>
                     </li>
