--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                <h2>Fancy a try?</h2>
+                <h2>Give it a go.</h2>
                 <p>We have set up a testing service for GeoKey that you can use to give it a try. You can sign up, create projects and connect to the API. Just don't use it in production, we'll clean the data from time to time.</p>
                 <p><a href="http://play.geokey.org.uk" class="btn"><i class="fa fa-caret-square-o-right"></i> Try GeoKey now</a></p>
             </div>
