Fixes spelling mistake

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
             </div>
             <div class="col-lg-7 col-sm-8">
                 <ul class="features">
-                    <li><i class="fa fa-cubes fa-fw fa-lg"></i> Setup up your data structures</li>
+                    <li><i class="fa fa-cubes fa-fw fa-lg"></i> Setup your data structures</li>
                     <li><i class="fa fa-users fa-fw fa-lg"></i> Decide who can access, contribute and moderate data</li>
                     <li><i class="fa fa-camera-retro fa-fw fa-lg"></i> Add photos and videos to your contributions</li>
                     <li><i class="fa fa-comments-o fa-fw fa-lg"></i> Discuss</li>
