Layout changes to header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Home
     <div class="hero container">
         <h1>Collect, share and discuss local knowledge.</h1>
         <p>GeoKey is an infrastructure for participatory mapping.</p>
+        <p><a href="/help/what-is-geokey.html" class="btn">Learn more</a></p>
     </div>
 </header>
 
