Improves developer section

--- a/developers/index.html
+++ b/developers/index.html
@@ -18,9 +18,25 @@ title: "GeoKey – For Developers"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6">
-                <h2><span class="mega-octicon octicon-milestone"></span> <a href="/help/getting-started.html">Getting started</a></h2>
-                <p>Get to know GeoKey and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+            <h2 class="col-sm-12"><i class="fa fa-code fa-lg"></i> Develop an application on top of the API</h2>
+            <div class="col-sm-4">
+                <p>Whether you want to build a smart phone app to collect data, visualise your data on a web map or want to build a bridge to your GIS — the REST API provides access to all information you need.</p>
+            </div>
+            <div class="col-sm-8">
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="/docs/">Read the API docs</a></h6>
+                        <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
+                        <p>Before you can use our API you need to register your app.</p>
+                    </li>
+                    <li>
+                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -29,10 +45,11 @@ title: "GeoKey – For Developers"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6" id="run-service">
-                <h2><span class="mega-octicon octicon-gear"></span> Run your own service</h2>
+            <h2 class="col-sm-12"><i class="fa fa-cog fa-lg"></i>  Run your own service</h2>
+            <div class="col-sm-4">
                 <p>You want to run your own independent service? Learn how to deploy the code on your system and how to keep the system up to date.</p>
-
+            </div>
+            <div class="col-sm-8">
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="/help/how-to-install.html">How to install</a></h6>
@@ -43,32 +60,8 @@ title: "GeoKey – For Developers"
                         <p>Identify and fix troubles with your installation.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/vagrant.html">Setup a development environment</a></h6>
-                        <p>Learn how to setup your personal development enviroment in just under 10 minutes.</p>
-                    </li>
-                    <li>
                         <h6><a href="/help/how-to-update.html">How to update</a></h6>
                         <p>How to update the system to the latest version</p>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-sm-6" id="build-app">
-                <h2><span class="mega-octicon octicon-code"></span> Build your own app</h2>
-                <p>Whether you want to build a client for data collection, create a sophisticated visualisation of your data or statiscally analyse the data — use our REST API to get connected.</p>
-
-                <ul class="tutorial-links">
-                    <li>
-                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
-                        <p>Before you can use our API you need to register your app.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
-                        <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
-                    </li>
-                    <li>
-                        <h6><a href="/docs/">Read the API docs</a></h6>
-                        <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                 </ul>
             </div>
@@ -79,16 +72,25 @@ title: "GeoKey – For Developers"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6" id="github-fork">
-                <h2><span class="mega-octicon octicon-git-branch"></span> Fork the code</h2>
-                <p>Help us to fix bugs or build new features.</p>
-                <p><a href="https://github.com/ExCiteS/geokey" class="btn">Fork the code on Github</a></p>
+            <h2 class="col-sm-12"><i class="fa fa-code-fork fa-lg"></i> Help us to improve GeoKey</h2>
+            <div class="col-sm-4">
+                <p>GeoKey is open-source. Help us to improve GeoKey by implementing new features or file and fix bugs.</p>
             </div>
-
-            <div class="col-sm-6" id="github-issue">
-                <h2><span class="mega-octicon octicon-issue-opened"></span> Report a problem</h2>
-                <p>Something does not work as expected? Are you missing a feature? Let us know — we promise to look into it.</p>
-                <p><a href="https://github.com/ExCiteS/geokey/issues/new" class="btn">Report a problem</a></p>
+            <div class="col-sm-8">
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="https://github.com/ExCiteS/geokey">Fork the code on Github</a></h6>
+                        <p>Help us to fix bugs or build new features.</p>
+                    </li>
+                    <li>
+                        <h6><a href="https://github.com/ExCiteS/geokey/issues/new">Report a problem</a></h6>
+                        <p>Something does not work as expected? Are you missing a feature? Let us know — we promise to look into it.</p>
+                    </li>
+                    <li>
+                        <h6><a href="https://github.com/ExCiteS/geokey-website">Improve the documentation and tutorials</a></h6>
+                        <p>This website is a Git repository. Fork it to help us improve GeoKey's documentation.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
