--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ title: Home
                 <ul class="features">
                     <li><i class="fa fa-code fa-fw fa-lg"></i> Use the REST API to build apps</li>
                     <li><i class="fa fa-desktop fa-fw fa-lg"></i> Install GeoKey on your server</li>
+                    <li><i class="fa fa-code-fork fa-fw fa-lg"></i> Help us to improve GeoKey</li>
                 </ul>
 
                 <p><a href="/developers/" class="btn">Start coding</a></p>
